force-app/main/default/objects/Comprador__c/Comprador__c.object-meta.xml
<CustomObject>
    <label>Comprador</label>
    <nameField>
        <displayFormat>CP-{000000000}</displayFormat>
        <label>Comprador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compradores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>