force-app/main/default/objects/Comprador__c/fields/CompradorPrincipal__c.field-meta.xml
<CustomField>
    <fullName>CompradorPrincipal__c</fullName>
    <label>Comprador principal?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>