force-app/main/default/objects/Comprador__c/fields/PorcentagemDeParticipacao__c.field-meta.xml
<CustomField>
    <fullName>PorcentagemDeParticipacao__c</fullName>
    <label>% de participação</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>