force-app/main/default/objects/Comprador__c/fields/TipoParticipante__c.field-meta.xml
<CustomField>
    <fullName>TipoParticipante__c</fullName>
    <label>Tipo de Participante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comprador</fullName>
            </value>
            <value>
                <fullName>Sócio</fullName>
            </value>
            <value>
                <fullName>Fiador</fullName>
            </value>
            <value>
                <fullName>Procurador</fullName>
            </value>
            <value>
                <fullName>Cônjuge/Companheiro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>