force-app/main/default/objects/Comprador__c/recordTypes/Comprador.recordType-meta.xml
<RecordType>
    <fullName>Comprador</fullName>
    <active>true</active>
    <label>Comprador</label>
</RecordType>