force-app/main/default/objects/Comprador__c/recordTypes/Fiador.recordType-meta.xml
<RecordType>
    <fullName>Fiador</fullName>
    <active>true</active>
    <label>Fiador</label>
</RecordType>