force-app/main/default/objects/Comprador__c/validationRules/PorcentagemAcimaDeZero.validationRule-meta.xml
<ValidationRule>
    <fullName>PorcentagemAcimaDeZero</fullName>
    <active>true</active>
    <errorConditionFormula>AND(PorcentagemDeParticipacao__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>PorcentagemDeParticipacao__c</errorDisplayField>
    <errorMessage>A Porcentagem tem que ser acima de 0%</errorMessage>
</ValidationRule>